k8s/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncio-gateway
  namespace: syncio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: syncio-gateway
  template:
    metadata:
      labels:
        app: syncio-gateway
    spec:
      containers:
        - name: gateway
          image: vietpham18/api-gateway:07cca7623bb1502a6956ab52dc15928fb71b0ac7
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "768Mi"
            limits:
              cpu: "750m"
              memory: "1Gi"
          volumeMounts:
            - name: config-volume
              mountPath: /config
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 15
      volumes:
        - name: config-volume
          configMap:
            name: gateway-config
---
apiVersion: v1
kind: Service
metadata:
  name: syncio-gateway
  namespace: syncio
  annotations:
    cloud.google.com/backend-config: '{"default": "syncio-backend-config"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: syncio-gateway
  ports:
    - port: 80
      targetPort: 8080
